<resources>
    <string name="app_name">Hacker News Reader</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="bookmark">Bookmark</string>
    <string name="share">Share</string>
    <string name="top_stories">Top</string>
    <string name="top_stories_title">Top stories</string>
    <string name="new_stories">New</string>
    <string name="new_stories_title">New stories</string>
    <string name="best_stories">Best</string>
    <string name="best_stories_title">Best stories</string>
    <string name="ask_hn">Ask HN</string>
    <string name="show_hn">Show HN</string>
    <string name="settings">Settings</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="comments">Comments</string>
    <string name="stories">Stories</string>
    <string name="copy_text">Copy text</string>
    <string name="remove_bookmark">Remove from bookmarks</string>
    <string name="add_bookmark">Add to bookmarks</string>
    <string name="change_theme">Choose Theme</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
