<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/topStoriesFragment">

    <fragment
        android:id="@+id/topStoriesFragment"
        android:name="org.team4.hnreader.ui.destinations.TopStoriesFragment"
        android:label="@string/top_stories_title"
        tools:layout="@layout/fragment_top_stories">
        <action
            android:id="@+id/action_topStoriesFragment_to_storyDetailsFragment"
            app:destination="@id/storyDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/newStoriesFragment"
        android:name="org.team4.hnreader.ui.destinations.NewStoriesFragment"
        android:label="@string/new_stories_title"
        tools:layout="@layout/fragment_new_stories">
        <action
            android:id="@+id/action_newStoriesFragment_to_storyDetailsFragment"
            app:destination="@id/storyDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/bestStoriesFragment"
        android:name="org.team4.hnreader.ui.destinations.BestStoriesFragment"
        android:label="@string/best_stories_title"
        tools:layout="@layout/fragment_best_stories">
        <action
            android:id="@+id/action_bestStoriesFragment_to_storyDetailsFragment"
            app:destination="@id/storyDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/askHNFragment"
        android:name="org.team4.hnreader.ui.destinations.AskHNFragment"
        android:label="@string/ask_hn"
        tools:layout="@layout/fragment_ask_hn">
        <action
            android:id="@+id/action_askHNFragment_to_storyDetailsFragment"
            app:destination="@id/storyDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/showHNFragment"
        android:name="org.team4.hnreader.ui.destinations.ShowHNFragment"
        android:label="@string/show_hn"
        tools:layout="@layout/fragment_show_hn">
        <action
            android:id="@+id/action_showHNFragment_to_storyDetailsFragment"
            app:destination="@id/storyDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/storyDetailsFragment"
        android:name="org.team4.hnreader.ui.destinations.StoryDetailsFragment"
        android:label="Comments"
        tools:layout="@layout/fragment_comments_recycler_view">
        <argument
            android:name="story"
            app:argType="org.team4.hnreader.data.model.Story" />
    </fragment>

    <fragment
        android:id="@+id/bookmarksStoriesFragment"
        android:name="org.team4.hnreader.ui.destinations.BookmarksStoriesFragment"
        android:label="Bookmarked stories"
        tools:layout="@layout/fragment_bookmarks_stories">
        <action
            android:id="@+id/action_bookmarksStoriesFragment_to_storyDetailsFragment"
            app:destination="@id/storyDetailsFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookmarksCommentsFragment"
        android:name="org.team4.hnreader.ui.destinations.BookmarksCommentsFragment"
        android:label="Bookmarked comments"
        tools:layout="@layout/fragment_bookmarks_comments" />
</navigation>
