<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="32dp"
    android:paddingVertical="16dp">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnBookmarkComment"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bookmark"
        android:textAlignment="center"
        app:icon="@drawable/ic_star_outline"
        app:iconSize="32dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCopyCommentText"
        style="@style/Widget.MaterialComponents.Button.TextButton.Dialog.Flush"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copy_text"
        android:textAlignment="center"
        app:icon="@drawable/ic_copy_icon"
        app:iconSize="32dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShareComment"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:textAlignment="center"
        app:icon="@drawable/ic_share"
        app:iconSize="32dp" />
</LinearLayout>
